<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/dp_8">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_name"
        android:hint="@string/hint_address"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_address"
        android:hint="@string/hint_phone"
        android:inputType="phone"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_insert_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_phone"
        android:text="@string/insert_data"/>

</RelativeLayout>
